--- a/sr_hand_config/6458/calibrations/calibration.yaml
+++ b/sr_hand_config/6458/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2024 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -13,59 +13,59 @@
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
 sr_calibrations: [
-["FFJ1", [[3267.0, 0.0], [2483.0, 22.5], [1698.0, 45.0], [1005.0, 67.5], [409.0, 90.0]]], 
-["FFJ2", [[2893.0, 0.0], [2678.0, 22.5], [2322.0, 45.0], [1973.0, 67.5], [1608.0, 90.0]]], 
-["FFJ3", [[3084.0, -15.0], [2484.0, 0.0], [1961.0, 22.5], [1398.0, 45.0], [978.0, 67.5], [769.0, 90.0]]], 
-["FFJ4", [[2587.0, -20.0], [2260.0, -10.0], [1908.0, 0.0], [1590.0, 10.0], [1314.0, 20.0]]], 
-["MFJ1", [[3259.41, 0.0], [2652.0, 22.5], [1976.0, 45.0], [1328.0, 67.5], [698.0, 90.0]]], 
-["MFJ2", [[2927.78, 0.0], [2699.0, 22.5], [2346.0, 45.0], [1956.0, 67.5], [1575.0, 90.0]]], 
-["MFJ3", [[3174.0, -15.0], [2574.0, 0.0], [2026.0, 22.5], [1461.0, 45.0], [960.0, 67.5], [625.0, 90.0]]], 
-["MFJ4", [[2127.0, -20.0], [1819.0, -10.0], [1539.7, 0.0], [1222.0, 10.0], [971.0, 20.0]]], 
-["RFJ1", [[3309.0, 0.0], [2722.0, 22.5], [2069.0, 45.0], [1439.0, 67.5], [843.0, 90.0]]], 
-["RFJ2", [[3014.0, 0.0], [2787.0, 22.5], [2405.0, 45.0], [2002.0, 67.5], [1577.0, 90.0]]], 
-["RFJ3", [[3058.0, -15.0], [2458.0, 0.0], [2009.0, 22.5], [1533.0, 45.0], [1106.0, 67.5], [905.0, 90.0]]], 
-["RFJ4", [[956.0, -20.0], [1236.0, -10.0], [1531.0, 0.0], [1812.0, 10.0], [2099.0, 20.0]]], 
-["LFJ1", [[2968.0, 0.0], [2282.0, 22.5], [1509.0, 45.0], [838.0, 67.5], [367.0, 90.0]]], 
-["LFJ2", [[2972.0, 0.0], [2605.0, 22.5], [2200.0, 45.0], [1762.0, 67.5], [1390.0, 90.0]]], 
-["LFJ3", [[3419.0, -15.0], [2819.15, 0.0], [2218.0, 22.5], [1633.0, 45.0], [1206.0, 67.5], [864.0, 90.0]]], 
-["LFJ4", [[1016.0, -20.0], [1280.0, -10.0], [1577.0, 0.0], [1860.0, 10.0], [2093.0, 20.0]]], 
-["LFJ5", [[653.35, 0.0], [1641.0, 22.5], [2140.0, 45.0], [2632.0, 67.5]]], 
-["THJ3", [[2590.0, -12.0], [1834.0, 0.0], [1078.0, 12.0]]], 
-["THJ4", [[1432.0, 0.0], [1661.0, 22.5], [1953.0, 45.0], [2277.0, 67.5]]], 
-["THJ5", [[512.0, -60.0], [778.0, -45.0], [1004.0, -30.0], [1239.0, -15.0], [1480.0, 0.0], [1902.0, 15.0], [2329.0, 30.0], [2801.0, 45.0], [3088.0, 60.0]]], 
-["WRJ1", [[2374.0, -45.0], [2251.0, -22.5], [2101.0, 0.0], [1975.0, 15.0], [1870.0, 30.0]]], 
-["WRJ2", [[2871.0, -30.0], [1299.0, 0.0], [716.0, 10.0]]], 
+["FFJ1", [[2594.0, 0.0], [1786.0, 22.5], [1046.0, 45.0], [438.0, 67.5], [108.0, 90.0]]], 
+["FFJ2", [[2898.0, 0.0], [2570.0, 22.5], [2181.0, 45.0], [1773.0, 67.5], [1367.0, 90.0]]], 
+["FFJ3", [[2806.0, -15.0], [2473.0, 0.0], [2032.0, 22.5], [1561.0, 45.0], [1149.0, 67.5], [847.0, 90.0]]], 
+["FFJ4", [[2371.0, -20.0], [2040.0, -10.0], [1724.0, 0.0], [1397.0, 10.0], [1140.0, 20.0]]], 
+["MFJ1", [[3553.0, 0.0], [2919.0, 22.5], [2255.0, 45.0], [1409.0, 67.5], [691.0, 90.0]]], 
+["MFJ2", [[2858.0, 0.0], [2534.0, 22.5], [2140.0, 45.0], [1729.0, 67.5], [1373.0, 90.0]]], 
+["MFJ3", [[2940.0, -15.0], [2598.0, 0.0], [2101.0, 22.5], [1583.0, 45.0], [1152.0, 67.5], [882.0, 90.0]]], 
+["MFJ4", [[2669.0, -20.0], [2290.0, -10.0], [1906.7, 0.0], [1464.0, 10.0], [1146.0, 20.0]]], 
+["RFJ1", [[3188.0, 0.0], [2591.0, 22.5], [1930.0, 45.0], [1250.0, 67.5], [625.0, 90.0]]], 
+["RFJ2", [[2842.0, 0.0], [ 2541.0, 22.5], [2151.0, 45.0], [1749.0, 67.5], [1409.0, 90.0]]], 
+["RFJ3", [[3173.0, -15.0], [2945.0, 0.0], [2580.0, 22.5], [2133.0, 45.0], [1619.0, 67.5], [1182.0, 90.0]]], 
+["RFJ4", [[1386.0, -20.0], [1694.0, -10.0], [2008.0, 0.0], [2316.0, 10.0], [2616.0, 20.0]]], 
+["LFJ1", [[2977.0, 0.0], [22361.0, 22.5], [1744.0, 45.0], [1158.0, 67.5], [651.0, 90.0]]], 
+["LFJ2", [[2819.0, 0.0], [2509.0, 22.5], [2163.0, 45.0], [1752.0, 67.5], [1413.0, 90.0]]], 
+["LFJ3", [[3229.0, -15.0], [3010.0, 0.0], [2631.0, 22.5], [2121.0, 45.0], [1575.0, 67.5], [1085.0, 90.0]]], 
+["LFJ4", [[891.0, -20.0], [1291.0, -10.0], [1748.0, 0.0], [2158.0, 10.0], [2582.0, 20.0]]], 
+["LFJ5", [[1632.0, 0.0], [2229.0, 22.5], [2624.0, 45.0]]], 
+["THJ3", [[2526.0, -12.0], [1990.0, 0.0], [1138.0, 12.0]]], 
+["THJ4", [[2624.0, 0.0], [2394.0, 22.5], [2090.0, 45.0], [1760.0, 67.5]]], 
+["THJ5", [[600.0, -60.0], [925.0, -45.0], [1190.0, -30.0], [1463.0, -15.0], [1845.0, 0.0], [2262.0, 15.0], [2625.0, 30.0], [2935.0, 45.0], [3217.0, 60.0]]], 
+["WRJ1", [[2304.0, -45.0], [2203.0, -22.5], [2065.0, 0.0], [1965.0, 15.0], [1870.0, 30.0]]], 
+["WRJ2", [[2505.0, -30.0], [912.0, 0.0], [279.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[3427.0, 2392.0], -15.0, 40.0], 
-                    [[3327.0, 2233.0], -15.0, 20.0], 
-                    [[3227.0, 2059.0], -15.0, 0.0], 
-                    [[3127.0, 1867.0], -15.0, -20.0], 
-                    [[3027.0, 1713.0], -15.0, -40.0],
-                    [[2627.0, 2362.0], 0.0, 40.0], 
-                    [[2616.0, 2203.0], 0.0, 20.0], 
-                    [[2593.0, 2029.0], 0.0, 0.0], 
-                    [[2584.0, 1837.0], 0.0, -20.0], 
-                    [[2568.0, 1683.0], 0.0, -40.0], 
-                    [[2172.0, 2345.0], 22.5, 40.0], 
-                    [[2160.0, 2184.0], 22.5, 20.0], 
-                    [[2144.0, 2000.0], 22.5, 0.0], 
-                    [[2120.0, 1810.0], 22.5, -20.0], 
-                    [[2104.0, 1651.0], 22.5, -40.0], 
-                    [[1709.0, 2323.0], 45.0, 40.0], 
-                    [[1697.0, 2165.0], 45.0, 20.0], 
-                    [[1680.0, 1977.0], 45.0, 0.0], 
-                    [[1660.0, 1787.0], 45.0, -20.0], 
-                    [[1643.0, 1631.0], 45.0, -40.0], 
-                    [[1298.0, 2295.0], 67.5, 40.0], 
-                    [[1295.0, 2139.0], 67.5, 20.0], 
-                    [[1278.0, 1951.0], 67.5, 0.0], 
-                    [[1260.0, 1770.0], 67.5, -20.0], 
-                    [[1248.0, 1617.0], 67.5, -40.0], 
-                    [[1023.0, 2280.0], 90.0, 40.0], 
-                    [[1009.0, 2119.0], 90.0, 20.0], 
-                    [[993.0, 1937.0], 90.0, 0.0], 
-                    [[973.0, 1758.0], 90.0, -20.0], 
-                    [[959.0, 1599.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[3072.0, 2471.0], -15.0, 40.0], 
+                    [[3056.0, 2351.0], -15.0, 20.0], 
+                    [[3040.0, 2191.0], -15.0, 0.0], 
+                    [[3023.0, 2032.0], -15.0, -20.0], 
+                    [[3004.0, 1886.0], -15.0, -40.0],
+                    [[2823.0, 2463.0], 0.0, 40.0], 
+                    [[2815.0, 2335.0], 0.0, 20.0], 
+                    [[2800.0, 2175.0], 0.0, 0.0], 
+                    [[2780.0, 2032.0], 0.0, -20.0], 
+                    [[2755.0, 1872.0], 0.0, -40.0], 
+                    [[2415.0, 2439.0], 22.5, 40.0], 
+                    [[2399.0, 2319.0], 22.5, 20.0], 
+                    [[2383.0, 2160.0], 22.5, 0.0], 
+                    [[2360.0, 2000.0], 22.5, -20.0], 
+                    [[2343.0, 1847.0], 22.5, -40.0], 
+                    [[1964.0, 2415.0], 45.0, 40.0], 
+                    [[1948.0, 2288.0], 45.0, 20.0], 
+                    [[1927.0, 2140.0], 45.0, 0.0], 
+                    [[1920.0, 1984.0], 45.0, -20.0], 
+                    [[1904.0, 1823.0], 45.0, -40.0], 
+                    [[1539.0, 2396.0], 67.5, 40.0], 
+                    [[1528.0, 2264.0], 67.5, 20.0], 
+                    [[1504.0, 2111.0], 67.5, 0.0], 
+                    [[1496.0, 1959.0], 67.5, -20.0], 
+                    [[1484.0, 1799.0], 67.5, -40.0], 
+                    [[1203.0, 2366.0], 90.0, 40.0], 
+                    [[1184.0, 2239.0], 90.0, 20.0], 
+                    [[1167.0, 2087.0], 90.0, 0.0], 
+                    [[1159.0, 1935.0], 90.0, -20.0], 
+                    [[1144.0, 1776.0], 90.0, -40.0]]]
 ]
