--- a/sr_hand_config/6458/controls/motors/motor_board_effort_controllers.yaml
+++ b/sr_hand_config/6458/controls/motors/motor_board_effort_controllers.yaml
@@ -1,4 +1,4 @@
-# Copyright 2024 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -31,7 +31,7 @@ ffj0:
     torque_limiter_gain: 64
   pos_filter:
     tau: 0.05
-ffj3:
+ffj3:s
   backlash_compensation: true
   pid:
     d: 0
