--- a/sr_hand_config/1866/calibrations/calibration.yaml
+++ b/sr_hand_config/1866/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2024 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -12,22 +12,26 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[3071.0, 0.0], [2364.0, 22.5], [1602.0, 45.0], [896.0, 67.5], [441.0, 90.0]]], 
-["FFJ2", [[3033.0, 0.0], [2816.0, 22.5], [2453.0, 45.0], [1994.0, 67.5], [1494.0, 90.0]]],  
-["FFJ3", [[1999.0, -15.0], [1411.0, 0.0], [1788.0, 22.5], [2204.0, 45.0], [2624.0, 67.5], [2927.0, 90.0]]], 
+["FFJ1", [[3127.0, 0.0], [2364.0, 22.5], [1602.0, 45.0], [896.0, 67.5], [441.0, 90.0]]], 
+["FFJ2", [[3074.0, 0.0], [2816.0, 22.5], [2453.0, 45.0], [1994.0, 67.5], [1494.0, 90.0]]], 
+["FFJ3", [[1411.0, 0.0], [1788.0, 22.5], [2204.0, 45.0], [2624.0, 67.5], [2927.0, 90.0]]], 
 ["FFJ4", [[877.0, -20.0], [1523.0, -10.0], [1831.0, 0.0], [1960.0, 10.0], [2027.0, 20.0]]], 
-["MFJ1", [[3414.0, 0.0], [2588.0, 22.5], [1847.0, 45.0], [1176.0, 67.5], [659.0, 90.0]]], 
-["MFJ2", [[2904.0, 0.0], [2696.0, 22.5], [2307.0, 45.0], [1879.0, 67.5], [1466.0, 90.0]]], 
-["MFJ3", [[1311.0, -15.0], [1489.0, 0.0], [1763.0, 22.5], [2232.0, 45.0], [2678.0, 67.5], [2974.0, 90.0]]],  
+["MFJ1", [[3416.0, 0.0], [2588.0, 22.5], [1847.0, 45.0], [1176.0, 67.5], [659.0, 90.0]]], 
+["MFJ2", [[2881.0, 0.0], [2696.0, 22.5], [2307.0, 45.0], [1879.0, 67.5], [1466.0, 90.0]]], 
+["MFJ3", [[1489.0, 0.0], [1763.0, 22.5], [2232.0, 45.0], [2678.0, 67.5], [2974.0, 90.0]]], 
 ["MFJ4", [[1106.0, -20.0], [1623.0, -10.0], [1878.0, 0.0], [1988.0, 10.0], [2033.0, 20.0]]], 
-["RFJ1", [[2934.0, 0.0], [2160.0, 22.5], [1353.0, 45.0], [676.0, 67.5], [244.0, 90.0]]], 
-["RFJ2", [[2654.0, 0.0], [2380.0, 22.5], [2031.0, 45.0], [1701.0, 67.5], [1342.0, 90.0]]], 
-["RFJ3", [[3058.0, -15.0], [2124.0, 22.5], [2551.0, 45.0], [2910.0, 67.5], [3128.0, 90.0]]], 
+["RFJ1", [[2951.0, 0.0], [2160.0, 22.5], [1353.0, 45.0], [676.0, 67.5], [244.0, 90.0]]], 
+["RFJ2", [[2679.0, 0.0], [2380.0, 22.5], [2031.0, 45.0], [1701.0, 67.5], [1342.0, 90.0]]], 
+["RFJ3", [[1693.0, 0.0], [2124.0, 22.5], [2551.0, 45.0], [2910.0, 67.5], [3128.0, 90.0]]], 
 ["RFJ4", [[2036.0, -20.0], [1979.0, -10.0], [1860.0, 0.0], [1571.0, 10.0], [983.0, 20.0]]], 
-["LFJ1", [[3101.0, 0.0], [2270.0, 22.5], [1483.0, 45.0], [765.0, 67.5], [300.0, 90.0]]], 
-["LFJ2", [[2754.0, 0.0], [2496.0, 22.5], [2163.0, 45.0], [1822.0, 67.5], [1491.0, 90.0]]], 
-["LFJ3", [[1399.0, -15.0], [1656.0, 0.0], [2131.0, 22.5], [2566.0, 45.0], [2867.0, 67.5], [3034.0, 90.0]]], 
+["LFJ1", [[3115.0, 0.0], [2270.0, 22.5], [1483.0, 45.0], [765.0, 67.5], [300.0, 90.0]]], 
+["LFJ2", [[2755.0, 0.0], [2496.0, 22.5], [2163.0, 45.0], [1822.0, 67.5], [1491.0, 90.0]]], 
+["LFJ3", [[1656.0, 0.0], [2131.0, 22.5], [2566.0, 45.0], [2867.0, 67.5], [3034.0, 90.0]]], 
 ["LFJ4", [[2035.0, -20.0], [1995.0, -10.0], [1896.0, 0.0], [1599.0, 10.0], [1126.0, 20.0]]], 
 ["LFJ5", [[1518.0, 0.0], [2002.0, 22.5], [2637.0, 45.0], [3562.0, 67.5]]], 
 ["THJ3", [[1499.0, -12.0], [2105.0, 0.0], [2511.0, 12.0]]], 
@@ -38,12 +42,7 @@ sr_calibrations: [
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2599.0, 2237.0], -15.0, 40.0], 
-                    [[2599.0, 2081.0], -15.0, 20.0], 
-                    [[2599.0, 1887.0], -15.0, 0.0], 
-                    [[2599.0, 1725.0], -15.0, -20.0], 
-                    [[2599.0, 1617.0], -15.0, -40.0],
-                    [[2220.0, 2237.0], 0.0, 40.0], 
+[["THJ1", "THJ2"], [[[2220.0, 2237.0], 0.0, 40.0], 
                     [[2220.0, 2081.0], 0.0, 20.0], 
                     [[2220.0, 1887.0], 0.0, 0.0], 
                     [[2220.0, 1725.0], 0.0, -20.0], 
