--- a/sr_hand_config/1866/calibrations/calibration.yaml
+++ b/sr_hand_config/1866/calibrations/calibration.yaml
@@ -17,27 +17,27 @@
 # sr_triple_pedal.py. I'll leave this here in case it might be useful later.
 
 sr_calibrations: [
-["FFJ1", [[3127.0, 0.0], [2364.0, 22.5], [1602.0, 45.0], [896.0, 67.5], [441.0, 90.0]]], 
-["FFJ2", [[3074.0, 0.0], [2816.0, 22.5], [2453.0, 45.0], [1994.0, 67.5], [1494.0, 90.0]]], 
-["FFJ3", [[1411.0, 0.0], [1788.0, 22.5], [2204.0, 45.0], [2624.0, 67.5], [2927.0, 90.0]]], 
+["FFJ1", [[3080.0, 0.0], [2364.0, 22.5], [1602.0, 45.0], [896.0, 67.5], [441.0, 90.0]]], 
+["FFJ2", [[3145.0, 0.0], [2905.0, 22.5], [2453.0, 45.0], [1994.0, 67.5], [1494.0, 90.0]]], 
+["FFJ3", [[1191.0, -15.0], [1329.0, 0.0], [1757.0, 22.5], [2204.0, 45.0], [2624.0, 67.5], [2927.0, 90.0]]], 
 ["FFJ4", [[877.0, -20.0], [1523.0, -10.0], [1831.0, 0.0], [1960.0, 10.0], [2027.0, 20.0]]], 
-["MFJ1", [[3416.0, 0.0], [2588.0, 22.5], [1847.0, 45.0], [1176.0, 67.5], [659.0, 90.0]]], 
-["MFJ2", [[2881.0, 0.0], [2696.0, 22.5], [2307.0, 45.0], [1879.0, 67.5], [1466.0, 90.0]]], 
-["MFJ3", [[1489.0, 0.0], [1763.0, 22.5], [2232.0, 45.0], [2678.0, 67.5], [2974.0, 90.0]]], 
+["MFJ1", [[3417.0, 0.0], [2588.0, 22.5], [1847.0, 45.0], [1176.0, 67.5], [659.0, 90.0]]], 
+["MFJ2", [[2954.0, 0.0], [2696.0, 22.5], [2307.0, 45.0], [1879.0, 67.5], [1466.0, 90.0]]], 
+["MFJ3", [[1069.0, -15.0], [1383.0, 0.0], [1581.0, 7.5], [1695.0, 15.0], [1763.0, 22.5], [2232.0, 45.0], [2678.0, 67.5], [2974.0, 90.0]]], 
 ["MFJ4", [[1106.0, -20.0], [1623.0, -10.0], [1878.0, 0.0], [1988.0, 10.0], [2033.0, 20.0]]], 
-["RFJ1", [[2951.0, 0.0], [2160.0, 22.5], [1353.0, 45.0], [676.0, 67.5], [244.0, 90.0]]], 
-["RFJ2", [[2679.0, 0.0], [2380.0, 22.5], [2031.0, 45.0], [1701.0, 67.5], [1342.0, 90.0]]], 
-["RFJ3", [[1693.0, 0.0], [2124.0, 22.5], [2551.0, 45.0], [2910.0, 67.5], [3128.0, 90.0]]], 
+["RFJ1", [[2936.0, 0.0], [2160.0, 22.5], [1353.0, 45.0], [676.0, 67.5], [244.0, 90.0]]], 
+["RFJ2", [[2674.0, 0.0], [2380.0, 22.5], [2031.0, 45.0], [1701.0, 67.5], [1342.0, 90.0]]], 
+["RFJ3", [[1445.0, -15.0], [1655.0, 0.0], [2124.0, 22.5], [2551.0, 45.0], [2910.0, 67.5], [3128.0, 90.0]]], 
 ["RFJ4", [[2036.0, -20.0], [1979.0, -10.0], [1860.0, 0.0], [1571.0, 10.0], [983.0, 20.0]]], 
-["LFJ1", [[3115.0, 0.0], [2270.0, 22.5], [1483.0, 45.0], [765.0, 67.5], [300.0, 90.0]]], 
-["LFJ2", [[2755.0, 0.0], [2496.0, 22.5], [2163.0, 45.0], [1822.0, 67.5], [1491.0, 90.0]]], 
-["LFJ3", [[1656.0, 0.0], [2131.0, 22.5], [2566.0, 45.0], [2867.0, 67.5], [3034.0, 90.0]]], 
+["LFJ1", [[3113.0, 0.0], [2270.0, 22.5], [1483.0, 45.0], [765.0, 67.5], [300.0, 90.0]]], 
+["LFJ2", [[2759.0, 0.0], [2496.0, 22.5], [2163.0, 45.0], [1822.0, 67.5], [1491.0, 90.0]]], 
+["LFJ3", [[1399.0, -15.0], [1619.0, 0.0], [2131.0, 22.5], [2566.0, 45.0], [2867.0, 67.5], [3034.0, 90.0]]], 
 ["LFJ4", [[2035.0, -20.0], [1995.0, -10.0], [1896.0, 0.0], [1599.0, 10.0], [1126.0, 20.0]]], 
-["LFJ5", [[1518.0, 0.0], [2002.0, 22.5], [2637.0, 45.0], [3562.0, 67.5]]], 
+["LFJ5", [[1493.0, 0.0], [2002.0, 22.5], [2637.0, 45.0], [3562.0, 67.5]]], 
 ["THJ3", [[1499.0, -12.0], [2105.0, 0.0], [2511.0, 12.0]]], 
 ["THJ4", [[1553.0, 0.0], [1852.0, 22.5], [2131.0, 45.0], [2400.0, 67.5]]], 
 ["THJ5", [[467.0, -60.0], [1038.0, -30.0], [1547.0, 0.0], [2424.0, 30.0], [3048.0, 60.0]]], 
-["WRJ1", [[2518.0, -45.0], [2417.0, -22.5], [2244.0, 0.0], [2111.0, 15.0], [1988.0, 30.0]]], 
+["WRJ1", [[2559.0, -45.0], [2483.0, -22.5], [2319.0, 0.0], [2145.0, 15.0], [2017.0, 30.0]]], 
 ["WRJ2", [[2957.0, -30.0], [1442.0, 0.0], [820.0, 10.0]]], 
 ]
 
