--- a/sr_hand_config/4698/calibrations/calibration.yaml
+++ b/sr_hand_config/4698/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -12,27 +12,31 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[3247.0, 0.0], [2537.0, 22.5], [1699.0, 45.0], [974.0, 67.5], [329.0, 90.0]]], 
-["FFJ2", [[2778.0, 0.0], [2392.0, 22.5], [1944.0, 45.0], [1525.0, 67.5], [1173.0, 90.0]]], 
-["FFJ3", [[1731.0, 0.0], [2016.0, 22.5], [2308.0, 45.0], [2567.0, 67.5], [2746.0, 90.0]]], 
-["FFJ4", [[2546.0, -20.0], [2212.0, -10.0], [1878.0, 0.0], [1544.0, 10.0], [1276.0, 20.0]]], 
-["MFJ1", [[3069.0, 0.0], [2385.0, 22.5], [1578.0, 45.0], [824.0, 67.5], [203.0, 90.0]]], 
-["MFJ2", [[2777.0, 0.0], [2441.0, 22.5], [2049.0, 45.0], [1647.0, 67.5], [1276.0, 90.0]]], 
-["MFJ3", [[1655.0, 0.0], [1959.0, 22.5], [2273.0, 45.0], [2563.0, 67.5], [2799.0, 90.0]]], 
-["MFJ4", [[1963.0, -20.0], [1641.0, -10.0], [1344.0, 0.0], [1063.0, 10.0], [812.0, 20.0]]], 
-["RFJ1", [[3309.0, 0.0], [2489.0, 22.5], [1643.0, 45.0], [870.0, 67.5], [162.0, 90.0]]], 
-["RFJ2", [[2830.0, 0.0], [2516.0, 22.5], [2148.0, 45.0], [1792.0, 67.5], [1449.0, 90.0]]], 
-["RFJ3", [[1772.0, 0.0], [2079.0, 22.5], [2383.0, 45.0], [2661.0, 67.5], [2875.0, 90.0]]], 
-["RFJ4", [[1176.0, -20.0], [1449.0, -10.0], [1743.0, 0.0], [2069.0, 10.0], [2346.0, 20.0]]], 
-["LFJ1", [[3010.0, 0.0], [2268.0, 22.5], [1440.0, 45.0], [720.0, 67.5], [204.0, 90.0]]], 
-["LFJ2", [[2834.0, 0.0], [2493.0, 22.5], [2069.0, 45.0], [1645.0, 67.5], [1228.0, 90.0]]], 
-["LFJ3", [[1735.0, 0.0], [2008.0, 22.5], [2295.0, 45.0], [2593.0, 67.5], [2814.0, 90.0]]], 
-["LFJ4", [[744.0, -20.0], [1121.0, -10.0], [1456.0, 0.0], [1826.0, 10.0], [2175.0, 20.0]]], 
-["LFJ5", [[547.0, 0.0], [1155.0, 22.5], [1626.0, 45.0], [2047.0, 67.5]]], 
+["FFJ1", [[3209.0, 0.0], [2481.0, 22.5], [1635.0, 45.0], [821.0, 67.5], [339.0, 90.0]]], 
+["FFJ2", [[2781.0, 0.0], [2331.0, 22.5], [1945.0, 45.0], [1485.0, 67.5], [1164.0, 90.0]]], 
+["FFJ3", [[1735.0, 0.0], [2041.0, 22.5], [2327.0, 45.0], [2593.0, 67.5], [2751.0, 90.0]]], 
+["FFJ4", [[2524.0, -20.0], [2194.0, -10.0], [1897.0, 0.0], [1583.0, 10.0], [1321.0, 20.0]]], 
+["MFJ1", [[3042.0, 0.0], [2160.0, 22.5], [1499.0, 45.0], [757.0, 67.5], [191.0, 90.0]]], 
+["MFJ2", [[2786.0, 0.0], [2411.0, 22.5], [2013.0, 45.0], [1623.0, 67.5], [1279.0, 90.0]]], 
+["MFJ3", [[1673.0, 0.0], [1980.0, 22.5], [2284.0, 45.0], [2573.0, 67.5], [2790.0, 90.0]]], 
+["MFJ4", [[1967.0, -20.0], [1653.0, -10.0], [1344.0, 0.0], [1065.0, 10.0], [809.0, 20.0]]], 
+["RFJ1", [[3309.0, 0.0], [2264.0, 22.5], [1593.0, 45.0], [813.0, 67.5], [89.0, 90.0]]], 
+["RFJ2", [[2831.0, 0.0], [2521.0, 22.5], [2157.0, 45.0], [1783.0, 67.5], [1491.0, 90.0]]], 
+["RFJ3", [[1772.0, 0.0], [2096.0, 22.5], [2386.0, 45.0], [2673.0, 67.5], [2866.0, 90.0]]], 
+["RFJ4", [[1159.0, -20.0], [1433.0, -10.0], [1735.0, 0.0], [2050.0, 10.0], [2335.0, 20.0]]], 
+["LFJ1", [[3005.0, 0.0], [2185.0, 22.5], [1407.0, 45.0], [707.0, 67.5], [211.0, 90.0]]], 
+["LFJ2", [[2840.0, 0.0], [2467.0, 22.5], [2054.0, 45.0], [1621.0, 67.5], [1215.0, 90.0]]], 
+["LFJ3", [[1729.0, 0.0], [2035.0, 22.5], [2317.0, 45.0], [2599.0, 67.5], [2775.0, 90.0]]], 
+["LFJ4", [[775.0, -20.0], [1105.0, -10.0], [1451.0, 0.0], [1829.0, 10.0], [2139.0, 20.0]]], 
+["LFJ5", [[541.0, 0.0], [1155.0, 22.5], [1626.0, 45.0], [2047.0, 67.5]]], 
 ["THJ3", [[2374.0, -12.0], [1638.0, 0.0], [1001.0, 12.0]]], 
 ["THJ4", [[1437.0, 0.0], [1695.0, 22.5], [2018.0, 45.0], [2349.0, 67.5]]], 
-["THJ5", [[520.0, -60.0], [809.0, -45.0], [1064.0, -30.0], [1357.0, -15.0], [1658.0, 0.0], [2071.0, 15.0], [2456.0, 30.0], [2794.0, 45.0], [3085.0, 60.0]]], 
+["THJ5", [[601.0, -60.0], [853.0, -45.0], [1095.0, -30.0], [1381.0, -15.0], [1701.0, 0.0], [2115.0, 15.0], [2421.0, 30.0], [2805.0, 45.0], [3077.0, 60.0]]], 
 ["WRJ1", [[2424.0, -45.0], [2328.0, -22.5], [2180.0, 0.0], [2075.0, 15.0], [1961.0, 30.0]]], 
 ["WRJ2", [[2101.0, -30.0], [1270.0, 0.0], [704.0, 10.0]]], 
 ]
