--- a/sr_hand_config/6522/calibrations/calibration.yaml
+++ b/sr_hand_config/6522/calibrations/calibration.yaml
@@ -12,60 +12,64 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[3267.0, 0.0], [2483.0, 22.5], [1698.0, 45.0], [1005.0, 67.5], [409.0, 90.0]]], 
-["FFJ2", [[2893.0, 0.0], [2678.0, 22.5], [2322.0, 45.0], [1973.0, 67.5], [1608.0, 90.0]]], 
-["FFJ3", [[3084.0, -15.0], [2484.0, 0.0], [1961.0, 22.5], [1398.0, 45.0], [978.0, 67.5], [769.0, 90.0]]], 
-["FFJ4", [[2587.0, -20.0], [2260.0, -10.0], [1908.0, 0.0], [1590.0, 10.0], [1314.0, 20.0]]], 
-["MFJ1", [[3259.41, 0.0], [2652.0, 22.5], [1976.0, 45.0], [1328.0, 67.5], [698.0, 90.0]]], 
-["MFJ2", [[2927.78, 0.0], [2699.0, 22.5], [2346.0, 45.0], [1956.0, 67.5], [1575.0, 90.0]]], 
-["MFJ3", [[3174.0, -15.0], [2574.0, 0.0], [2026.0, 22.5], [1461.0, 45.0], [960.0, 67.5], [625.0, 90.0]]], 
-["MFJ4", [[2127.0, -20.0], [1819.0, -10.0], [1539.7, 0.0], [1222.0, 10.0], [971.0, 20.0]]], 
-["RFJ1", [[3309.0, 0.0], [2722.0, 22.5], [2069.0, 45.0], [1439.0, 67.5], [843.0, 90.0]]], 
-["RFJ2", [[3014.0, 0.0], [2787.0, 22.5], [2405.0, 45.0], [2002.0, 67.5], [1577.0, 90.0]]], 
-["RFJ3", [[3058.0, -15.0], [2458.0, 0.0], [2009.0, 22.5], [1533.0, 45.0], [1106.0, 67.5], [905.0, 90.0]]], 
-["RFJ4", [[956.0, -20.0], [1236.0, -10.0], [1531.0, 0.0], [1812.0, 10.0], [2099.0, 20.0]]], 
-["LFJ1", [[2968.0, 0.0], [2282.0, 22.5], [1509.0, 45.0], [838.0, 67.5], [367.0, 90.0]]], 
-["LFJ2", [[2972.0, 0.0], [2605.0, 22.5], [2200.0, 45.0], [1762.0, 67.5], [1390.0, 90.0]]], 
-["LFJ3", [[3419.0, -15.0], [2819.15, 0.0], [2218.0, 22.5], [1633.0, 45.0], [1206.0, 67.5], [864.0, 90.0]]], 
-["LFJ4", [[1016.0, -20.0], [1280.0, -10.0], [1577.0, 0.0], [1860.0, 10.0], [2093.0, 20.0]]], 
-["LFJ5", [[653.35, 0.0], [1641.0, 22.5], [2140.0, 45.0], [2632.0, 67.5]]], 
-["THJ3", [[2590.0, -12.0], [1834.0, 0.0], [1078.0, 12.0]]], 
-["THJ4", [[1432.0, 0.0], [1661.0, 22.5], [1953.0, 45.0], [2277.0, 67.5]]], 
-["THJ5", [[512.0, -60.0], [778.0, -45.0], [1004.0, -30.0], [1239.0, -15.0], [1480.0, 0.0], [1902.0, 15.0], [2329.0, 30.0], [2801.0, 45.0], [3088.0, 60.0]]], 
-["WRJ1", [[2374.0, -45.0], [2251.0, -22.5], [2101.0, 0.0], [1975.0, 15.0], [1870.0, 30.0]]], 
-["WRJ2", [[2871.0, -30.0], [1299.0, 0.0], [716.0, 10.0]]], 
+["FFJ1", [[2835.0, 0.0], [2240.0, 22.5], [1629.0, 45.0], [1050.0, 67.5], [501.0, 90.0]]], 
+["FFJ2", [[2875.0, 0.0], [2670.0, 22.5], [2352.0, 45.0], [2027.0, 67.5], [1745.0, 90.0]]], 
+["FFJ3", [[3227.0, -15.0], [3005.01, 0.0], [2633.0, 22.5], [2145.0, 45.0], [1680.0, 67.5], [1165.0, 90.0]]], 
+["FFJ4", [[1039.0, -20.0], [1339.0, -10.0], [1644.0, 0.0], [1958.0, 10.0], [2279.0, 20.0]]], 
+["MFJ1", [[3043.0, 0.0], [2388.0, 22.5], [1785.0, 45.0], [1129.0, 67.5], [604.0, 90.0]]], 
+["MFJ2", [[2927.0, 0.0], [2679.0, 22.5], [2254.0, 45.0], [1911.0, 67.5], [1545.0, 90.0]]], 
+["MFJ3", [[3242.0, -15.0], [3002.0, 0.0], [2572.0, 22.5], [2075.0, 45.0], [1615.0, 67.5], [1156.0, 90.0]]], 
+["MFJ4", [[1112.0, -20.0], [1400.0, -10.0], [1719.0, 0.0], [2039.0, 10.0], [2345.0, 20.0]]], 
+["RFJ1", [[2964.0, 0.0], [2335.0, 22.5], [1658.0, 45.0], [1060.0, 67.5], [584.0, 90.0]]], 
+["RFJ2", [[2798.0, 0.0], [2544.0, 22.5], [2171.0, 45.0], [1818.0, 67.5], [1449.0, 90.0]]], 
+["RFJ3", [[3528.0, -15.0], [3285.0, 0.0], [2834.0, 22.5], [2309.0, 45.0], [1720.0, 67.5], [1188.0, 90.0]]], 
+["RFJ4", [[2724.0, -20.0], [2441.0, -10.0], [2093.35, 0.0], [1780.0, 10.0], [1527.0, 20.0]]], 
+["LFJ1", [[3052.0, 0.0], [2475.0, 22.5], [1752.0, 45.0], [1103.0, 67.5], [529.0, 90.0]]], 
+["LFJ2", [[2749.0, 0.0], [2461.0, 22.5], [2077.0, 45.0], [1709.0, 67.5], [1408.0, 90.0]]], 
+["LFJ3", [[3346.0, -15.0], [3162.0, 0.0], [2753.0, 22.5], [2245.0, 45.0], [1691.0, 67.5], [1215.0, 90.0]]], 
+["LFJ4", [[2812.0, -20.0], [2520.0, -10.0], [2112.0, 0.0], [1779.0, 10.0], [1545.0, 20.0]]], 
+["LFJ5", [[1430.93, 0.0], [1991.0, 22.5], [2468.0, 45.0], [2945.0, 67.5]]], 
+["THJ3", [[2563.0, -12.0], [1658.0, 0.0], [1110.0, 12.0]]], 
+["THJ4", [[2578.0, 0.0], [2289.0, 22.5], [1945.0, 45.0], [1601.0, 67.5]]], 
+["THJ5", [[415.0, -60.0], [548.0, -45.0], [780.0, -30.0], [1014.0, -15.0], [1306.0, 0.0], [1569.0, 15.0], [2018.0, 30.0], [2428.0, 45.0], [2769.0, 60.0]]], 
+["WRJ1", [[2026.0, -45.0], [2165.0, -22.5], [2261.37, 0.0], [2346.0, 15.0], [2405.0, 30.0]]], 
+["WRJ2", [[2455.0, -30.0], [1124.0, 0.0], [596.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[3427.0, 2392.0], -15.0, 40.0], 
-                    [[3327.0, 2233.0], -15.0, 20.0], 
-                    [[3227.0, 2059.0], -15.0, 0.0], 
-                    [[3127.0, 1867.0], -15.0, -20.0], 
-                    [[3027.0, 1713.0], -15.0, -40.0],
-                    [[2627.0, 2362.0], 0.0, 40.0], 
-                    [[2616.0, 2203.0], 0.0, 20.0], 
-                    [[2593.0, 2029.0], 0.0, 0.0], 
-                    [[2584.0, 1837.0], 0.0, -20.0], 
-                    [[2568.0, 1683.0], 0.0, -40.0], 
-                    [[2172.0, 2345.0], 22.5, 40.0], 
-                    [[2160.0, 2184.0], 22.5, 20.0], 
-                    [[2144.0, 2000.0], 22.5, 0.0], 
-                    [[2120.0, 1810.0], 22.5, -20.0], 
-                    [[2104.0, 1651.0], 22.5, -40.0], 
-                    [[1709.0, 2323.0], 45.0, 40.0], 
-                    [[1697.0, 2165.0], 45.0, 20.0], 
-                    [[1680.0, 1977.0], 45.0, 0.0], 
-                    [[1660.0, 1787.0], 45.0, -20.0], 
-                    [[1643.0, 1631.0], 45.0, -40.0], 
-                    [[1298.0, 2295.0], 67.5, 40.0], 
-                    [[1295.0, 2139.0], 67.5, 20.0], 
-                    [[1278.0, 1951.0], 67.5, 0.0], 
-                    [[1260.0, 1770.0], 67.5, -20.0], 
-                    [[1248.0, 1617.0], 67.5, -40.0], 
-                    [[1023.0, 2280.0], 90.0, 40.0], 
-                    [[1009.0, 2119.0], 90.0, 20.0], 
-                    [[993.0, 1937.0], 90.0, 0.0], 
-                    [[973.0, 1758.0], 90.0, -20.0], 
-                    [[959.0, 1599.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[1660.0, 1073.0], -15.0, 40.0], 
+                    [[1790.0, 1085.0], -15.0, 20.0], 
+                    [[1947.0, 1101.0], -15.0, 0.0], 
+                    [[2092.0, 1118.0], -15.0, -20.0], 
+                    [[2222.0, 1136.0], -15.0, -40.0], 
+                    [[1672.0, 1307.0], 0.0, 40.0], 
+                    [[1804.0, 1320.0], 0.0, 20.0], 
+                    [[1954.0, 1336.0], 0.0, 0.0], 
+                    [[2107.0, 1352.0], 0.0, -20.0], 
+                    [[2247.0, 1367.0], 0.0, -40.0], 
+                    [[1693.0, 1719.0], 22.5, 40.0], 
+                    [[1823.0, 1734.0], 22.5, 20.0], 
+                    [[1979.0, 1752.0], 22.5, 0.0], 
+                    [[2127.0, 1767.0], 22.5, -20.0], 
+                    [[2267.0, 1781.0], 22.5, -40.0], 
+                    [[1720.0, 2184.0], 45.0, 40.0], 
+                    [[1855.0, 2199.0], 45.0, 20.0], 
+                    [[2003.0, 2215.0], 45.0, 0.0], 
+                    [[2155.0, 2228.0], 45.0, -20.0], 
+                    [[2292.0, 2240.0], 45.0, -40.0], 
+                    [[1746.0, 2653.0], 67.5, 40.0], 
+                    [[1878.0, 2667.0], 67.5, 20.0], 
+                    [[2031.0, 2687.0], 67.5, 0.0], 
+                    [[2178.0, 2697.0], 67.5, -20.0], 
+                    [[2316.0, 2706.0], 67.5, -40.0], 
+                    [[1767.0, 3037.0], 90.0, 40.0], 
+                    [[1896.0, 3061.0], 90.0, 20.0], 
+                    [[2053.0, 3082.0], 90.0, 0.0], 
+                    [[2203.0, 3084.0], 90.0, -20.0], 
+                    [[2337.0, 3087.0], 90.0, -40.0]]]
 ]
