--- a/sr_hand_config/5498/calibrations/calibration.yaml
+++ b/sr_hand_config/5498/calibrations/calibration.yaml
@@ -1,4 +1,4 @@
-# Copyright 2022 Shadow Robot Company Ltd.
+# Copyright 2025 Shadow Robot Company Ltd.
 #
 # This program is free software: you can redistribute it and/or modify it
 # under the terms of the GNU General Public License as published by the Free
@@ -12,55 +12,59 @@
 # You should have received a copy of the GNU General Public License along
 # with this program. If not, see <http://www.gnu.org/licenses/>.
 
+# This file contains an alternate approach to pedal connection, that falls victim to Ubuntu suspending USB devices.
+# Try as I might, I couldn't make Ubuntu leave it alone, so switched to the input events approach seen in
+# sr_triple_pedal.py. I'll leave this here in case it might be useful later.
+
 sr_calibrations: [
-["FFJ1", [[2979.0, 0.0], [2405.0, 22.5], [1757.0, 45.0], [1202.0, 67.5], [689.0, 90.0]]], 
-["FFJ2", [[2850.0, 0.0], [2548.0, 22.5], [2139.0, 45.0], [1767.0, 67.5], [1424.0, 90.0]]], 
-["FFJ3", [[2307.75, 0.0], [1855.0, 22.5], [1398.0, 45.0], [1102.0, 67.5], [951.0, 90.0]]], 
-["FFJ4", [[2628.0, -20.0], [2308.0, -10.0], [1985.0, 0.0], [1651.0, 10.0], [1330.0, 20.0]]], 
-["MFJ1", [[2994.0, 0.0], [2247.0, 22.5], [1491.0, 45.0], [838.0, 67.5], [336.0, 90.0]]], 
-["MFJ2", [[3049.0, 0.0], [2771.0, 22.5], [2378.0, 45.0], [1933.0, 67.5], [1522.0, 90.0]]], 
-["MFJ3", [[2577.0, 0.0], [1990.0, 22.5], [1486.0, 45.0], [993.0, 67.5], [4095.0, 90.0]]], 
-["MFJ4", [[2275.0, -20.0], [1931.0, -10.0], [1586.0, 0.0], [1254.0, 10.0], [936.0, 20.0]]], 
-["RFJ1", [[3175.0, 0.0], [2495.0, 22.5], [1785.0, 45.0], [1119.0, 67.5], [525.0, 90.0]]], 
-["RFJ2", [[2806.0, 0.0], [2542.0, 22.5], [2189.0, 45.0], [1857.0, 67.5], [1551.0, 90.0]]], 
-["RFJ3", [[2328.0, 0.0], [1883.0, 22.5], [1440.0, 45.0], [955.0, 67.5], [732.0, 90.0]]], 
-["RFJ4", [[1213.0, -20.0], [1524.0, -10.0], [1848.0, 0.0], [2166.0, 10.0], [2499.0, 20.0]]], 
-["LFJ1", [[4095.0, 0.0], [2431.0, 22.5], [1899.0, 45.0], [1309.0, 67.5], [808.0, 90.0]]], 
-["LFJ2", [[4095.0, 0.0], [2663.0, 22.5], [2313.0, 45.0], [1896.0, 67.5], [1481.0, 90.0]]], 
-["LFJ3", [[4095.0, 0.0], [2012.0, 22.5], [2303.0, 45.0], [2546.0, 67.5], [2698.0, 90.0]]], 
-["LFJ4", [[10.0, -20.0], [1875.0, -10.0], [2200.0, 0.0], [2548.0, 10.0], [2864.0, 20.0]]], 
-["LFJ5", [[10.0, 0.0], [2162.0, 22.5], [2807.0, 45.0], [3913.0, 67.5]]], 
-["THJ3", [[1909.0, -15.0], [1908.0, 0.0], [1908.0, 15.0]]], 
-["THJ4", [[1370.0, 0.0], [1636.0, 22.5], [1933.0, 45.0], [2230.0, 67.5]]], 
-["THJ5", [[466.0, -60.0], [752.0, -45.0], [1021.0, -30.0], [1308.0, -15.0], [1581.0, 0.0], [1966.0, 15.0], [2412.0, 30.0], [2740.0, 45.0], [3122.0, 60.0]]], 
-["WRJ1", [[2267.0, -45.0], [2405.0, -22.5], [1683.0, 0.0], [1689.0, 15.0], [1721.0, 30.0]]], 
-["WRJ2", [[10.0, -30.0], [1269.0, 0.0], [665.0, 10.0]]], 
+["FFJ1", [[3315.0, 0.0], [2750.0, 22.5], [2022.0, 45.0], [1309.0, 67.5], [646.0, 90.0]]], 
+["FFJ2", [[3011.0, 0.0], [2809.0, 22.5], [2430.0, 45.0], [2037.0, 67.5], [1615.0, 90.0]]], 
+["FFJ3", [[2534.0, 0.0], [2087.0, 22.5], [1509.0, 45.0], [1046.0, 67.5], [666.0, 90.0]]], 
+["FFJ4", [[2308.0, -20.0], [1973.0, -10.0], [1664.0, 0.0], [1356.0, 10.0], [1131.0, 20.0]]], 
+["MFJ1", [[3121.0, 0.0], [2389.0, 22.5], [1700.0, 45.0], [1062.0, 67.5], [500.0, 90.0]]], 
+["MFJ2", [[2943.0, 0.0], [2597.0, 22.5], [2136.0, 45.0], [1685.0, 67.5], [1266.0, 90.0]]], 
+["MFJ3", [[2929.0, 0.0], [2425.0, 22.5], [1942.0, 45.0], [1515.0, 67.5], [864.0, 90.0]]], 
+["MFJ4", [[2378.0, -20.0], [2108.0, -10.0], [1835.0, 0.0], [1592.0, 10.0], [1356.0, 20.0]]], 
+["RFJ1", [[3317.0, 0.0], [2705.0, 22.5], [2016.0, 45.0], [1289.0, 67.5], [689.0, 90.0]]], 
+["RFJ2", [[2751.0, 0.0], [2389.0, 22.5], [1975.0, 45.0], [1578.0, 67.5], [1177.0, 90.0]]], 
+["RFJ3", [[2315.0, 0.0], [1913.0, 22.5], [1483.0, 45.0], [1112.0, 67.5], [911.0, 90.0]]], 
+["RFJ4", [[947.0, -20.0], [1256.0, -10.0], [1589.0, 0.0], [1931.0, 10.0], [2256.0, 20.0]]], 
+["LFJ1", [[2785.0, 0.0], [2075.0, 22.5], [1331.0, 45.0], [693.0, 67.5], [244.0, 90.0]]], 
+["LFJ2", [[2977.0, 0.0], [2713.0, 22.5], [2365.0, 45.0], [1985.0, 67.5], [1613.0, 90.0]]], 
+["LFJ3", [[2650.0, 0.0], [2154.0, 22.5], [1612.0, 45.0], [1181.0, 67.5], [770.0, 90.0]]], 
+["LFJ4", [[830.0, -20.0], [1088.0, -10.0], [1377.0, 0.0], [1670.0, 10.0], [1859.0, 20.0]]], 
+["LFJ5", [[911.0, 0.0], [1375.0, 22.5], [1713.0, 45.0], [2067.0, 67.5]]], 
+["THJ3", [[2260.0, -15.0], [1488.0, 0.0], [1034.0, 15.0]]], 
+["THJ4", [[2440.0, 0.0], [2160.0, 22.5], [1878.0, 45.0], [1606.0, 67.5]]], 
+["THJ5", [[884.0, -60.0], [1069.0, -45.0], [1333.0, -30.0], [1684.0, -15.0], [2084.0, 0.0], [2479.0, 15.0], [2782.0, 30.0], [3038.0, 45.0], [3327.0, 60.0]]], 
+["WRJ1", [[2399.0, -45.0], [2258.0, -22.5], [2074.0, 0.0], [1924.0, 15.0], [1792.0, 30.0]]], 
+["WRJ2", [[2579.0, -30.0], [1445.0, 0.0], [1023.0, 10.0]]], 
 ]
 
 sr_calibrations_coupled: [
-[["THJ1", "THJ2"], [[[2487.0, 2328.0], 0.0, 40.0], 
-                    [[2469.0, 2155.0], 0.0, 20.0], 
-                    [[2448.0, 1976.0], 0.0, 0.0], 
-                    [[2436.0, 1802.0], 0.0, -20.0], 
-                    [[2425.0, 1670.0], 0.0, -40.0], 
-                    [[2056.0, 2301.0], 22.5, 40.0], 
-                    [[2037.0, 2129.0], 22.5, 20.0], 
-                    [[2016.0, 1939.0], 22.5, 0.0], 
-                    [[2002.0, 1774.0], 22.5, -20.0], 
-                    [[1992.0, 1643.0], 22.5, -40.0], 
-                    [[1627.0, 2277.0], 45.0, 40.0], 
-                    [[1608.0, 2101.0], 45.0, 20.0], 
-                    [[1590.0, 1912.0], 45.0, 0.0], 
-                    [[1577.0, 1748.0], 45.0, -20.0], 
-                    [[1566.0, 1619.0], 45.0, -40.0], 
-                    [[1261.0, 2252.0], 67.5, 40.0], 
-                    [[1241.0, 2081.0], 67.5, 20.0], 
-                    [[1222.0, 1890.0], 67.5, 0.0], 
-                    [[1211.0, 1727.0], 67.5, -20.0], 
-                    [[1201.0, 1594.0], 67.5, -40.0], 
-                    [[1034.0, 2235.0], 90.0, 40.0], 
-                    [[1017.0, 2067.0], 90.0, 20.0], 
-                    [[998.0, 1876.0], 90.0, 0.0], 
-                    [[985.0, 1709.0], 90.0, -20.0], 
-                    [[977.0, 1581.0], 90.0, -40.0]]]
+[["THJ1", "THJ2"], [[[2846.0, 2419.0], 0.0, 40.0], 
+                    [[2842.0, 2283.0], 0.0, 20.0], 
+                    [[2803.0, 2115.0], 0.0, 0.0], 
+                    [[2807.0, 1946.0], 0.0, -20.0], 
+                    [[2784.0, 1789.0], 0.0, -40.0], 
+                    [[2452.0, 2401.0], 22.5, 40.0], 
+                    [[2464.0, 2255.0], 22.5, 20.0], 
+                    [[2443.0, 2088.0], 22.5, 0.0], 
+                    [[2415.0, 1920.0], 22.5, -20.0], 
+                    [[2392.0, 1768.0], 22.5, -40.0], 
+                    [[2048.0, 2381.0], 45.0, 40.0], 
+                    [[2065.0, 2237.0], 45.0, 20.0], 
+                    [[2036.0, 2052.0], 45.0, 0.0], 
+                    [[2011.0, 1884.0], 45.0, -20.0], 
+                    [[1990.0, 1745.0], 45.0, -40.0], 
+                    [[1673.0, 2361.0], 67.5, 40.0], 
+                    [[1670.0, 2208.0], 67.5, 20.0], 
+                    [[1655.0, 2045.0], 67.5, 0.0], 
+                    [[1615.0, 1875.0], 67.5, -20.0], 
+                    [[1597.0, 1726.0], 67.5, -40.0], 
+                    [[1364.0, 2341.0], 90.0, 40.0], 
+                    [[1351.0, 2196.0], 90.0, 20.0], 
+                    [[1335.0, 2031.0], 90.0, 0.0], 
+                    [[1298.0, 1852.0], 90.0, -20.0], 
+                    [[1302.0, 1698.0], 90.0, -40.0]]]
 ]
